fixed title alignment

--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -3,7 +3,8 @@
   /* grid-area: h; */
 
   display: grid;
-  grid-template-columns: 10% 90%;
+  /* grid-template-columns: 10% 90%; */
+  grid-template-columns: repeat(12, 1fr);
 
   background-color: #00275e;
   padding: 10px;
@@ -19,8 +20,8 @@
 
 /* TITLE STYLES */
 .header-title-container {
-  grid-column: 2 / -1;
-  grid-row: 1 / 2;
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
   place-self: center;
   margin-left: 10px;
 }
